Fixes the positioning of the dataservices notification toast
* Adds an extra margin-top to stop it butting up to the top of the results
  frame.

--- a/src/main/ngapp/src/app/dataservices/dataservices.component.css
+++ b/src/main/ngapp/src/app/dataservices/dataservices.component.css
@@ -43,3 +43,7 @@
   font-size: 1.25em;
   font-weight: bold;
 }
+
+.dataservices-toast {
+  margin-top: 0.5em;
+}
